# vd-reco-bench

./: .gitignore  CITATION.cff  CLAUDE.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
configs/: cost_model.yaml
configs/datasets/: amazon_beauty.yaml  amazon_books.yaml  amazon_electronics.yaml  ml25m.yaml
configs/experiments/: phase1_amazon_eval.yaml  phase1_amazon_only.yaml  phase1_baseline.yaml  phase1_combined.yaml  phase1_cpu_rethread.yaml  phase1_full.yaml  phase1_qdrant_server.yaml  phase1_v1.yaml
configs/models/: two_tower_base.yaml  two_tower_v1.yaml
configs/retrievers/: cuvs_cagra.yaml  cuvs_ivfpq.yaml  faiss_hnsw_cpu.yaml  faiss_ivfpq_gpu.yaml  milvus.yaml  pgvector.yaml  qdrant.yaml  qdrant_server.yaml  scann_cpu.yaml  weaviate.yaml
reco_bench/: __init__.py
reco_bench/data/: __init__.py  amazon2023.py  base.py  dataset.py  ml25m.py  pipeline.py  preprocessing.py  synthetic.py
reco_bench/eval/: __init__.py  cost.py  metrics.py  profiler.py
reports/: 00_overview.md  01_metric_design.md  02_dataset_selection.md  03_baseline_methodology.md  04_vdpu_value_proposition.md  05_reproducibility.md  06_phase1_findings.md  07_scaling.md  PRESENTATION.md  baseline_results.md
scripts/: 00_download_data.sh  10_train_two_tower.sh  20_build_index.sh  30_run_benchmark.sh  99_make_report.sh  README.md  combine_results.py  dump_eval_arrays.py  faiss_gpu_worker.py  gpu_keepalive_reco.sh  keep_alive.py  md_to_confluence.py  md_to_confluence_storage.py  md_to_html.py
tests/: test_metrics.py  test_retriever_contract.py
(+140 files in other folders)
